<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <GVL Name="G_IO" Id="{02d66863-e417-4b72-99eb-de1b59a2b786}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	
END_VAR

VAR_GLOBAL
	
	XMEAS_IO_IOUT	AT %Q*		:	ARRAY[1..8] OF INT;
	XMEAS_IO_VOUT 	AT %Q*		:	ARRAY[1..8] OF INT;
	
	// xmeas reported by tesim
	XMEAS						:	ARRAY[1..41] OF LREAL;
	
	MBS_XMEAS_RAW				:	ARRAY[1..4] OF REAL;
	MBS_XMEAS					:	ARRAY[1..4] OF REAL;
	MBS_XMEAS_CAL_OFFSET		:	ARRAY[1..4] OF REAL := [0.0, 0.0, 0.0, 0.0]; //[ -1.39, -1.55 ];
	
	// manipulated values reported by tesim
	XMV							:	ARRAY[1..12] OF LREAL;
	PROD_RATE					:	LREAL;
	P_REACTOR					:	LREAL;
	L_REACTOR					:	LREAL;
	T_REACTOR					:	LREAL;
	PCT_G						:	LREAL;
	L_SEPARATOR					:	LREAL;
	L_STRIPPER					:	LREAL;
	
	// disturbances as set in tesim
	IDV							:	ARRAY[1..20] OF DINT;
	
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>